# EdgeOpenCL

./: CMakeLists.txt  README.md  android-build.sh  performance_mode.sh
_legacy/: CMakeLists.txt
_legacy/cl_kernels/: cl_kernel_source.h  gen.py
_legacy/cl_kernels/clSource/: bfs.cl-done  gen_program_source.py  histo.cl-done  lbm.cl-done  mri-gridding.cl-done  vecAdd_optmized.cl
_legacy/experiments/: CLZeroCopyMatMul.cpp  CLZeroCopyVecAdd.cpp  CPUAffinityTest.cpp  CPUInterferenceMemTest.cpp  GPUInterferenceMemTest.cpp  MatAdd_CPU_GPU.cpp  MatAdd_CPU_GPU_Asyn.cpp  MatAdd_CPU_GPU_Asyn_multiQ.cpp  MemoryManagerTest.cpp  ZeroCopyMemOverhead.cpp  concurrentKernelExe.cpp  concurrentKernelMatMul.cpp  ion_test.cpp  mmapTest.cpp  qcomMatrixMultiplication.cpp  queryCLInfo.cpp  throughputTest_matMul.cpp  throughputTest_vecAdd.cpp
_legacy/include/: CL  CPUExecutor.h  CPU_blas.h  Executor.h  HeteroComputeAgent.h  KernelManager.h  MemoryManager.hpp  MemoryManager.hpp-T  TaskPack.h  cl_wrapper.h  heteroCompLib.h  utils.h
_legacy/parboil/: benchmark.h  bfs.cpp  histo.cpp  lbm.cpp  lbm.h  mri-gridding.cpp  mri-gridding.h  mri-q_cpu.cpp  sgemm_cpu.cpp  spmv_cpu.cpp  stencil_cpu.cpp
_legacy/src/: CPUExecutor.cpp  CPU_blas.cpp  Executor.cpp  HeteroComputeAgent.cpp  KernelManager.cpp  MemoryManager.cpp  cl_wrapper.cpp  ion.c  utils.cpp
include/: BufferDef.h  CLRT.h  CPU_utils.h  EDCL.h  EDCL_ResourceManager.h  EDCL_Scheduler.h  EDCL_Strategy.h  Stg_CA2020.h  Stg_Sequential.h  Trackable.h  csv.h  custom_cl.h  libopencl.h  utils.h
include/CL/: cl.h
kernels/: add.cl  add.ll  add.s  cmd.sh  test.bc  test.cl  test.s  vecAdd.cl
polybench-gpu/: calLambda.cpp  polybench.h  polybench_2mm.cpp  polybench_Stg_CA2020.cpp  polybench_atax.cpp  polybench_bicg.cpp  polybench_clProgramBuild.cpp  polybench_conv2d.cpp  polybench_conv3d.cpp  polybench_correlation.cpp  polybench_covariance.cpp  polybench_dataScal.cpp  polybench_fdtd2d.cpp  polybench_gemm.cpp  polybench_gesummv.cpp  polybench_gramschmidt.cpp  polybench_kernelTest.h  polybench_mvt.cpp  polybench_seq.cpp  polybench_seq_imp.cpp  polybench_stgTest.h  polybench_syr2k.cpp  polybench_tuning.cpp  test_Stg_CA2020_unit.cpp
polybench-gpu/Kernels/: 2mm.cl  atax.cl  bicg.cl  conv2d.cl  conv3d.cl  correlation.cl  covariance.cl  fdtd2d.cl  gemm.cl  gesummv.cl  gramschmidt.cl  mvt.cl  syr2k.cl  syrk.cl
src/: CLRT.cpp  CPU_utils.cpp  EDCL.cpp  EDCL_Scheduler.cpp  libopencl.cpp  utils.cpp
tests/: CoreHolder.cpp  EDCL_SampleCode.cpp  EnqueuWrite_vs_memcpy.cpp  cBufferTest.cpp  cleanCSV.cpp  clinfo.cpp  subDeviceTest.cpp  test_Kernel_DAG.cpp  test_ResourceManager.cpp  test_clrt_basic.cpp  test_clrt_each_subdevice.cpp  test_cpu_binding.cpp  test_edcl_basic.cpp  test_edcl_edbuffer.cpp  test_edcl_scheduler.cpp  test_events.cpp  test_kernelSlicing.cpp  test_work_split.cpp  testlib_cpu_vector_add.h  testlib_macros.h
